<resources>
    <string name="app_name">Трекер привычек</string>
    <string name="habit_name">habit_name</string>
    <string name="habit_description">habit_description</string>
    <string name="habit_period">habit_period</string>
    <string name="habit_priority">habit_priority</string>
    <string name="habit_type">Тип привычки</string>
    <string name="addButton">addButton</string>
    <string name="title_habit_name">Название привычки</string>
    <string name="title_habit_description">Описание</string>
    <string name="title_habit_priority">Приоритет</string>
    <string name="habit_type_good">Хорошая</string>
    <string name="habit_type_bad">Плохая</string>
    <string name="repeat">Повторять</string>
    <string name="repeat_text">раз в</string>
    <string name="repeat_text_end">дней</string>
    <string name="save_button_text">Сохранить</string>
    <string name="add_habit">Добавление</string>
    <string name="edit_habit">Редактирование</string>
    <string name="habit">привычка</string>
    <string name="priority">приоритет</string>
    <string name="required_field_err">Обязательное поле!</string>
    <string name="undo_button_text">Назад</string>
    <string name="habit_color_choose_label">Выбрать</string>
    <string name="habit_color_selected_label">Цвет</string>
    <string name="rgb">RGB: 255; 255; 255;</string>
    <string name="hsv">HSV: 0; 0; 100</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_habits">Мои привычки</string>
    <string name="about">О приложении</string>
    <string name="habit_tracker_android_application_v01">habit_tracker_android_application_v01</string>
</resources>