<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
        <TextView
                android:id="@+id/habit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_habit_name"
        />

        <EditText
                android:id="@+id/edit_habit_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
        />

        <TextView
                android:id="@+id/habit_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_habit_description"
        />

        <EditText
                android:id="@+id/edit_habit_description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
        />

        <TextView
                android:id="@+id/habit_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_habit_priority"
        />

        <Spinner
                android:id="@+id/edit_habit_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/priority"
        />

        <TextView
                android:id="@+id/habit_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_type"
        />

        <RadioGroup android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/habit_type_group"
                    android:orientation="horizontal">
            <RadioButton
                    android:id="@+id/habit_type_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_type_good"
            />
            <RadioButton
                    android:id="@+id/habit_type_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_type_bad"
            />
        </RadioGroup>

        <TextView
                android:id="@+id/habit_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_type"
        />

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/habit_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat"
            />

            <EditText
                    android:id="@+id/edit_habit_times"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:ems="2"
                    android:inputType="numberDecimal"/>

            <TextView
                    android:id="@+id/habit_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_text"/>

            <EditText
                    android:id="@+id/edit_habit_days"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:ems="2"
                    android:inputType="numberDecimal"/>

            <TextView
                    android:id="@+id/habit_days_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_text_end"
            />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/habit_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:backgroundTint="#0CED8F"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>